# tinyKaggleClaw

./: .gitignore  AGENTS.md  LICENSE  README.md  clean.sh  main.py  pyproject.toml  requirements.txt  restart.sh  run_no_root.sh  start_research_mvp.sh  task_common.sh
.codex/: runtime-communication
.codex/skills/: runtime-communication
.codex/skills/kaggle-kernel-discussion-birdclef2026/: SKILL.md
.codex/skills/kaggle-kernel-discussion-birdclef2026/references/: api-and-output.md
.codex/skills/kaggle-kernel-discussion-birdclef2026/scripts/: kaggle_pull_discussions.py  kaggle_pull_notebooks.py
recipe/birdclef_2026/: baseline.md  data.md  overview.md  start_prompt.md
recipe/birdclef_2026/2025_winning_solution/: 10th.md  1st.md  2nd.md  3th.md  4th.md  5th.md  6th.md  7th.md  9th.md  README.md
recipe/mnist/: data.md  overview.md  start_prompt.md
recipe/quant_strategy/: data.md  overview.md  start_prompt.md
research_mvp/: ARCHITECTURE.md  OPERATIONS.md  PROTOCOL.md  README.md  app.py  local_runtime.py  logging_utils.py  models.py  runtime.toml  runtime_cli.py  runtime_idle_monitor.py  store.py
research_mvp/identities/: leader.md  researcher.md  trainer.md
research_mvp/identities/quant/: leader.md  leader_zh.md  researcher.md  researcher_zh.md  trainer.md  trainer_zh.md
research_mvp/skills/runtime-communication/: SKILL.md
research_mvp/static/: architecture_report.html  index.html  runtime_board.html  thread.html
research_mvp/train_service/: API.md  README.md  __init__.py  app.py
research_mvp/train_service/static/: index.html
