[project]
name = "tinykaggleclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.0,<3",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "scikit-learn>=1.4,<2",
    "tushare>=1.4,<2",
    "uvicorn>=0.30,<1",
    "xgboost>=2.0,<3",
]
